--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,13 @@
   @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
 }
 
-.outline_btn {
-  @apply rounded-full border border-cyan-600 bg-transparent py-1.5 px-5 font-bold transition-all hover:text-black hover:border-black text-center text-sm font-inter flex items-center justify-center;
+.outline_btn,
+.outline_btn_red {
+  @apply rounded-lg border border-cyan-500 bg-transparent py-1.5 px-5 font-bold transition-all hover:text-black hover:border-black text-center text-sm font-inter flex items-center justify-center;
+}
+
+.outline_btn_red {
+  @apply border-red-500;
 }
 
 .head_text {
@@ -35,7 +40,7 @@
 }
 
 .search_input {
-  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+  @apply block w-full rounded-md border-2 border-cyan-500 bg-white py-36 font-satoshi pl-4 pr-12 pt-2 text-lg shadow-lg font-medium focus:border-cyan-700 focus:outline-none focus:ring-0;
 }
 
 .copy_btn {
@@ -79,7 +84,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 break-inside-avoid rounded-lg border-2 border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
 }
 
 .flex-center {
