--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,7 +57,7 @@
 
 /* Feed Component */
 .feed {
-  @apply mt-16 mx-auto w-full  flex justify-center items-center flex-col gap-2;
+  @apply mt-16 mx-auto w-full flex justify-center items-center flex-col gap-2;
 }
 
 /* Form Component */
@@ -66,7 +66,7 @@
 }
 
 .form_input {
-  @apply flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0;
+  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0;
 }
 
 /* Nav Component */
